# zhone

./: .gitignore  AUTHORS  ChangeLog  MANIFEST.in  README  autogen.sh  configure.ac  setup.py  zhone.1
data/: Makefile.am
data/launcher/: README  zhone.desktop
data/locale/: update.sh  zhone.pot
data/locale/pl/LC_MESSAGES/: zhone.mo  zhone.po
data/locale/ru/LC_MESSAGES/: zhone.mo  zhone.po
data/themes/: Makefile.am  zhone.edc  zhone_call.edc  zhone_configuration.edc  zhone_contacts.edc  zhone_dial.edc  zhone_error.edc  zhone_list_choose.edc  zhone_location.edc  zhone_lock.edc  zhone_menu.edc  zhone_message.edc  zhone_number_edit.edc  zhone_pin.edc  zhone_sms.edc  zhone_suspend.edc  zhone_text_edit.edc  zhone_text_show.edc
data/themes/old/: zhone.edc  zhone_call.edc  zhone_configuration.edc  zhone_text_edit.edc  zhone_text_show.edc
data/themes/toby/: build.sh  zhone.edc  zhone_alert.edc  zhone_call.edc  zhone_configuration.edc  zhone_dial.edc  zhone_error.edc  zhone_location.edc  zhone_main_menu.edc  zhone_menu.edc  zhone_message.edc  zhone_sms.edc  zhone_suspend.edc  zhone_wireless.edc
src/: Makefile.am  illume.pyx  illume_kbd.c  zhone  zhone-fsogsmd
